--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 # github.io
 RITAK Website
+<!DOCTYPE html>
+<html>
+<head>
+	<title>RITAK</title>
+	<link rel="stylesheet" type="text/css" href="Ritak.css">
+</head>
+<body>
+<H1>RITAK: An Investment Company      </H1>
+<p></p>
+<H2></H2>
