--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ RITAK Website
 <html>
 <head>
 	<title>RITAK</title>
-	<link rel="stylesheet" type="text/css" href="Ritak.css">
+	<link rel="stylesheet" type="text/css" href="GuardianFianna/github.io/index.css">
 </head>
 <body>
 <H1>RITAK: An Investment Company      </H1>
